# MPC-Platform

./: .gitignore  ACKNOWLEDGEMENT  README.md
app-back-end/: main.py  requirements.txt  runner.py
app-back-end/web/services/: delete.py  generate.py  result.py  status.py  update.py  verify.py
app-back-end/web/utils/: data.py  file.py  http.py
app-front-end/: package.json
app-front-end/public/: index.html
app-front-end/src/: App.tsx  config.ts
app-front-end/src/pages/: Ckks.tsx  Compute.tsx  Home.tsx
components/fhe_based/config/: data_to_server.json
components/fhe_based/src/: client.cpp
components/server/: go.mod  main.go
components/server/web/: handle.go  utils.go
components/server/web/cmds/: multi.go  single.go  vars.go
components/server/web/services/: cors.go  delete.go  result.go  update.go  vars.go  verify.go
components/server/web/utils/: data.go  file.go  types.go
components/shr_based/: CMakeLists.txt
components/shr_based/src/: sharer.cpp  utils.hpp  verifier.cpp
fhe_based/: CMakeLists.txt  data_gen.py
fhe_based/config/: config.json  data_to_client.json
fhe_based/src/: hd.cpp  server.cpp
fhe_based/src/common/: serializer.cpp  serializer.h
scripts/: break.py  cal.py  clear.sh  gen.py  look.py  run.py  share.rb  tldr.sh  verify.rb
server/: README.md  cal.py  main.go  run.py  script.txt  sharer  test.html  verifier
server/data/: data10k.csv  data10k.csv.txt
server/web/: handle.go  runCmd.go  utils.go
shr_based/: CMakeLists.txt  data100k.csv  datagen.py  mult3_main.cpp  run.rb  share.rb  verify.rb
shr_based/data/: data100k.csv  result.txt
shr_based/src/: sharer.cpp  verifier.cpp
